# yzta-bootcamp-19

./: .gitignore  README.md  docker-compose.yml
asistan/: Dockerfile  README.md  pyproject.toml
asistan/app/: __init__.py  araclar.py  ayarlar.py  cekirdek.py  model_hazirla.py  servis.py
asistan/tests/entegrasyon/: test_uctan_uca.py
asistan/tests/unit/: test_araclar.py  test_ayarlar.py  test_cekirdek.py  test_model_hazirla.py  test_servis.py
assets/sprint2/: loglar-ai-motor.txt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: ayarlar.py  gecmis_veri_yukle.py  guzergah_hazirla.py  main.py  seed.py
backend/app/adapters/cikan/: _fallback.py  _llm_ayristir.py  _oneri_ortak.py  _uretici_fabrika.py  _uyari_ortak.py  _yerel_filtre.py  _yerel_llm.py  bellek_ici.py  gemini_oneri.py  gemini_uyari.py  guvenlik.py  redis_baglanti.py  redis_durum.py  simple_oneri.py  simple_uyari.py  ws_yayin.py
backend/app/adapters/cikan/postgres/: baglanti.py  depolar.py  sorgular.py  tablolar.py
backend/app/adapters/giren/: konum_ureteci.py  mqtt_ingest.py  oneri_zamanlayici.py  uyari_zamanlayici.py  ws.py
backend/app/adapters/giren/rest/: araclar.py  bagimliliklar.py  cihazlar.py  duraklar.py  hatlar.py  oneriler.py  oturum.py  saglik.py  semalar.py  tanimlar.py  uyarilar.py
backend/app/application/: cihaz_durum_isle.py  konum_uret.py  olcum_isle.py  oneri_uret.py  oturum_ac.py  uyari_uret.py
backend/app/domain/: modeller.py  seviye.py
backend/app/ports/: anlik_durum.py  canli_yayin.py  depolar.py  guzergah.py  kimlik.py  oneri.py  sorgular.py  uyari.py
backend/mosquitto/: mosquitto.conf
backend/scripts/: oneri_test_verisi_uret.py
backend/simulator/: simulator.py
backend/tests/entegrasyon/: test_uctan_uca.py
backend/tests/unit/: test_cihaz_durum_isle.py  test_cors.py  test_llm_ayristir.py  test_mimari.py  test_mqtt_ingest.py  test_olcum_isle.py  test_oneri_ortak.py  test_oneri_rest.py  test_oneri_uret.py  test_oturum_ac.py  test_oturum_rest.py  test_rest.py  test_saglik.py  test_seviye.py  test_simple_oneri.py  test_simple_uyari.py  test_uretici_fabrika.py  test_uyari_rest.py  test_uyari_uret.py  test_ws_yayin.py  test_yerel_filtre.py
docs/: ai-motoru.md  api.md  asistan.md  ekranlar.md  genel-bakis.md  index.html  mimari.md  mqtt.md  otobus_yogunluk_gorsel_ozet_1.html
edge/: .dockerignore  Dockerfile  README.md  pyproject.toml
edge/app/: ayarlar.py  calistir.py  csrnet_agi.py  csrnet_kestirim.py  sahte_kestirim.py  video_kaynagi.py  yayinci.py
edge/tests/entegrasyon/: test_csrnet_kestirim.py
edge/tests/unit/: test_ayarlar.py  test_csrnet_agi.py  test_yayinci.py
frontend/: Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: asistan.js  canli.js  client.js  duraklar.js  guzergahlar.js  hatlar.js  oneriler.js  trend.js
frontend/src/components/: AsistanWidget.jsx  CanliHarita.jsx  HatDetayModal.jsx
frontend/src/hooks/: useCanliVeri.js  useCanliYayin.js  useClock.js
frontend/src/pages/: DashboardPage.jsx  LinesPage.jsx  LiveMapPage.jsx  LoginPage.jsx  StopsPage.jsx
model/: README.md
