[project]
name = "hat01-backend"
version = "0.1.0"
description = "HAT 01 — otobüs içi yolcu yoğunluğu tespiti, merkez backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiomqtt>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "redis>=5.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "bcrypt>=4.1",
    "pyjwt>=2.8",
    "google-genai>=1.0,<2.0",
    "httpx>=0.27",
    # Lokal AI motoru (SimpleAgent + Ollama). PyPI'da yok; doğrulanmış commit'e sabitli.
    "openjarvis @ git+https://github.com/open-jarvis/OpenJarvis.git@8b59eb87e0b6006d898947647b042bba28e25ed4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "websockets>=12.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# OpenJarvis PyPI'da yok; git URL'siyle doğrudan referans için gerekli.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TID"]
