[project]
name = "yotay-edge"
version = "0.1.0"
description = "Videodan CSRNet ile kişi sayıp MQTT'ye yayınlayan edge cihaz servisi"
requires-python = ">=3.12,<3.14"
dependencies = [
    "aiomqtt>=2.0",
]

[project.optional-dependencies]
# Opsiyonel CSRNet motoru. Varsayılan (sahte) kurulum ~800 MB'lık torch'u çekmez;
# boru hattı model olmadan da uçtan uca test edilebilsin diye ayrıldı.
# torch CPU tekerleği Dockerfile'da ayrı index'ten kurulur (CUDA sürümü ~1 GB fazla).
# torchvision gerekmiyor: ağ tanımı yalnız torch.nn kullanıyor.
csrnet = [
    "torch>=2.8",
    "numpy>=2.0",
    "opencv-python-headless>=4.12",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["entegrasyon: gerçek CSRNet ağırlığı gerektirir; varsayılan koşuda atlanır"]
addopts = "-m 'not entegrasyon'"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TID"]
